- Added endpoint tests for new annotation services.  Testing both     with/without Altcha   - Converted remaining Altcha endpoints over to POST and added helper     function in Controllers to support validation.
