# api/openapi.yaml
@@ -620,70 +620,96 @@ paths:
       x-eov-operation-handler: controllers/FamilyAssembliesController
     x-swagger-router-controller: FamilyAssemblies
   /families/{id}/tandem_repeats:
-    get:
+    post:
+      summary: Retrieve tandem repeat annotations (ULTRA) for this family.
       description: Return tandem repeat data generated by ULTRA for the specified
-        family.
+        family.  This is a private endpoint for use by Dfam.org.
       operationId: readTandemRepeats
+      tags:
+        - families
       parameters:
-      - description: Dfam family accession
-        explode: false
-        in: path
-        name: id
-        required: true
-        schema:
-          type: string
-        style: simple
+        - description: Dfam family accession
+          explode: false
+          in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          style: simple
+      requestBody:
+        required: false
+        description: Payload containing the Altcha verification token
+        content:                               
+          application/json:                                          
+            schema:          
+              type: object                                                   
+              properties:   
+                altcha_payload: 
+                  type: string
+                  description: Encoded Altcha solution payload
       responses:
         "200":
+          description: Tandem repeat annotations
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/TandemRepeatSearchResponse'
-          description: Tandem repeat annotations
         default:
+          description: Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-          description: Error
-      summary: Retrieve tandem repeat annotations (ULTRA) for this family
-      tags:
-      - families
       x-eov-operation-handler: controllers/FamiliesController
+    x-swagger-router-controller: Families
   /families/{id}/self_alignments:
-    get:
-      description: Return internal alignments of the family's consensus sequence.
+    post:
+      summary: Retreive internal (self) alignments of the family's consensus sequence.
+      description: Return internal (self) alignments of the family's consensus sequence.
+        This is a private endpoint for use by Dfam.org.
       operationId: readSelfAlignments
+      tags:
+        - families
       parameters:
-      - description: Dfam family accession
-        explode: false
-        in: path
-        name: id
-        required: true
-        schema:
-          type: string
-        style: simple
+        - description: Dfam family accession
+          explode: false
+          in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          style: simple
+      requestBody:
+        required: false
+        description: Payload containing the Altcha verification token
+        content:           
+          application/json:
+            schema:       
+              type: object
+              properties:      
+                altcha_payload:
+                  type: string                                
+                  description: Encoded Altcha solution payload
       responses:
         "200":
+          description: Self-alignment data
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/SelfAlignmentSearchResponse'
-          description: Self-alignment data
         default:
+          description: Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-          description: Error
-      summary: Retrieve self-alignment results for this family
-      tags:
-      - families
       x-eov-operation-handler: controllers/FamiliesController
+    x-swagger-router-controller: Families
   /families/{id}/dfam_relationships:
     post:
-      summary: Retrieve related Dfam families based on overlap or sequence similarity
+      summary: Retrieve related Dfam families based on sequence similarity.
       description: Return relationships between this family and other Dfam families.
+        This is a private endpoint for use by Dfam.org.
       operationId: readDfamRelationships
       tags:
         - families
@@ -696,15 +722,14 @@ paths:
             type: string
       requestBody:
         description: Payload containing the Altcha verification token
+        required: false
         content:
           application/json:
             schema:
               type: object
-              required:
-                - altcha_payload
               properties:
                 altcha_payload:
-                  type: string
+                  type: string                                
                   description: Encoded Altcha solution payload
       responses:
         "200":
@@ -722,36 +747,48 @@ paths:
       x-eov-operation-handler: controllers/FamiliesController
     x-swagger-router-controller: Families
   /families/{id}/protein_alignments:
-    get:
+    post:
+      summary: Retrieve protein alignments to the family consensus.
       description: Return protein hits aligned to the consensus sequence of the given
-        family.
+        family.  This is a private endpoint for use by Dfam.org.
       operationId: readProteinAlignments
+      tags:
+        - families
       parameters:
-      - description: Dfam family accession
-        explode: false
-        in: path
-        name: id
-        required: true
-        schema:
-          type: string
-        style: simple
+        - description: Dfam family accession
+          explode: false
+          in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          style: simple
+      requestBody:
+        required: false
+        description: Payload containing the Altcha verification token
+        content:                               
+          application/json:                                          
+            schema:          
+              type: object                                                   
+              properties:   
+                altcha_payload: 
+                  type: string
+                  description: Encoded Altcha solution payload
       responses:
         "200":
+          description: Protein alignment results
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProteinAlignmentSearchResponse'
-          description: Protein alignment results
         default:
+          description: Error
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-          description: Error
-      summary: Retrieve protein alignments to the family consensus
-      tags:
-      - families
       x-eov-operation-handler: controllers/FamiliesController
+    x-swagger-router-controller: Families
   /families/{id}/assemblies/{assembly_id}/model_coverage:
     get:
       description: Retrieve a family's coverage data associated with a given assembly.
