# controllers/FamiliesController.js
@@ -5,58 +5,70 @@
  * The heavy lifting of the Controller item is done in Request.js - that is where request
  * parameters are extracted and sent to the service, and where response is handled.
  */
-
 const Controller = require('./Controller');
 const service = require('../services/FamiliesService');
 const logger = require('../logger');
 const config = require('../config');
-const { verifySolution } = require('altcha-lib');
 
+
+/**
+ * /families/{id}/dfam_relationships
+ * Retrieve related Dfam families based on sequence similarity.
+ *
+ * This endpoint uses a custom handler which may (optional) verify
+ * an Altcha PoW payload before running the service.
+ *       
+ * @param {Object} request - The input parameters.
+ * @param {string} response - The Dfam family accession.
+ * @returns {Promise<ServiceResponse>} - A service response with related families.
+ */
 const readDfamRelationships = async (request, response) => {
-  try {
-    const id = request.params.id;
-    if ( config.REQUIRE_ALTCHA ) {
-      const altcha_payload = request.body?.altcha_payload;
+  await Controller.handleAltchaRequest(request, response, service.readDfamRelationships);
+};
 
-      if (!altcha_payload) {
-        return response.status(400).json({
-                message: 'Private endpoint (status: 1)',
-        });
-      }
+/**
+ * /families/{id}/protein_alignments
+ * Retrieve protein alignments to the family consensus.
+ *
+ * This endpoint uses a custom handler which may (optional) verify
+ * an Altcha PoW payload before running the service.
+ *       
+ * @param {Object} request - The input parameters.
+ * @param {string} response - The Dfam family accession.
+ * @returns {Promise<ServiceResponse>} - A service response with protein alignments.
+ */
+const readProteinAlignments = async (request, response) => {
+  await Controller.handleAltchaRequest(request, response, service.readProteinAlignments);
+};
 
-      const verified = await verifySolution(String(altcha_payload), config.ALTCHA_HMAC_KEY)
+/**
+ * /families/{id}/self_alignments
+ * Retreive internal (self) alignments of the family's consensus sequence.
+ *
+ * This endpoint uses a custom handler which may (optional) verify
+ * an Altcha PoW payload before running the service.
+ *       
+ * @param {Object} request - The input parameters.
+ * @param {string} response - The Dfam family accession.
+ * @returns {Promise<ServiceResponse>} - A service response with self alignments.
+ */
+const readSelfAlignments = async (request, response) => {
+  await Controller.handleAltchaRequest(request, response, service.readSelfAlignments);
+};
 
-      if (!verified) {
-        return response.status(403).json({
-               message: 'Private endpoint (status: 2)',
-        });
-      }
-    }
-    const result = await service.readDfamRelationships({ id });
-    response.status(200).json(result);
-  } catch (e) {
-    response.status(e.code || 500);
-    if (e.error instanceof Object) {
-      response.json(e.error);
-    } else {
-      response.end(e.error || e.message);
-    }
-
-  }
-  //await Controller.handleRequest(request, response, service.readDfamRelationships);
-  //
-//      let client_ip = request.headers['x-forwarded-for'] || request.connection.remoteAddress;
-//      const serviceResponse = await serviceOperation(this.collectRequestParams(request));
-//      Controller.sendResponse(response, serviceResponse);
-//      const time = new Date() - start;
-//      let urls = request.url.split("?");
-//      let endpoint = urls[0];
-//      let params = "";
-//      if (urls.length > 1) {
-//      params = urls[1];
-//      }
-//      logger.verbose({"method": request.method, "endpoint": endpoint, "params": params, "code": response.statusCode, "res_time": time, "client_ip": client_ip });
-//
+/**
+ * /families/{id}/tandem_repeats
+ * Retrieve tandem repeat annotations (ULTRA) for this family. 
+ *
+ * This endpoint uses a custom handler which may (optional) verify
+ * an Altcha PoW payload before running the service.
+ *       
+ * @param {Object} request - The input parameters.
+ * @param {string} response - The Dfam family accession.
+ * @returns {Promise<ServiceResponse>} - A service response with tandem repeat annotatons.
+ */
+const readTandemRepeats = async (request, response) => {
+  await Controller.handleAltchaRequest(request, response, service.readTandemRepeats);
 };
 
 const readFamilies = async (request, response) => {
@@ -83,17 +95,6 @@ const readFamilySequence = async (request, response) => {
   await Controller.handleRequest(request, response, service.readFamilySequence);
 };
 
-const readProteinAlignments = async (request, response) => {
-  await Controller.handleRequest(request, response, service.readProteinAlignments);
-};
-
-const readSelfAlignments = async (request, response) => {
-  await Controller.handleRequest(request, response, service.readSelfAlignments);
-};
-
-const readTandemRepeats = async (request, response) => {
-  await Controller.handleRequest(request, response, service.readTandemRepeats);
-};
 
 
 module.exports = {
